# AxolotSIL

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/adf_sil/share/adf_sil/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/adf_sil/share/adf_sil/cmake/: adf_silConfig-version.cmake  adf_silConfig.cmake
install/adf_sil/share/adf_sil/environment/: ament_prefix_path.dsv  path.dsv
install/gate_dtctn/lib/gate_dtctn/: gate_cv
install/gate_dtctn/share/gate_dtctn/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/gazebo_sim/share/gazebo_sim/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/path_fllwng/lib/path_fllwng/: waypoint_flight
install/path_fllwng/share/path_fllwng/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/adf_sil/: CMakeLists.txt  package.xml
src/adf_sil/launch/: sil.launch.py
src/gate_dtctn/: CMakeLists.txt
src/gate_dtctn/src/: segmentation.cpp
src/gazebo_sim/: package.xml  setup.py
src/gazebo_sim/worlds/: adr_circuit.world
src/opencv_scrpits/: GateDetection  GateDetection.cpp  Makefile
src/path_fllwng/: setup.cfg  setup.py
src/path_fllwng/path_fllwng/: mission.py
src/pymavlink_scripts/: 1_listen.py  2_mode.py  3_takeoff.py  4_movement.py  5_mission.py  6_land.py  mission.csv  mission_data.py  movement.csv  movement_data.py  node.py  takeoff.csv  takeoff_data.py
(+6 files in other folders)
